--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.14.6",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "react": "^16.2.0",
